fix(QR): fix qr code overflow issue in advanced send

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -117,3 +117,7 @@
     clear: left;
   }
 }
+
+.popover {
+  z-index: 1060;
+}
